--- a/agentic-control-demo.html
+++ b/agentic-control-demo.html
@@ -220,7 +220,7 @@
               <td>Patient Discharge Trigger</td>
               <td><span class="pill ok">Healthy</span></td>
               <td class="link-cell" onclick="goToView('healthAgents'); focusCard('ha_card_discharge')">2</td>
-              <td class="link-cell" onclick="goToView('healthAgents'); focusCard('ha_card_discharge')">12</td>
+              <td class="link-cell" onclick="goToView('healthAgents'); focusCard('ha_card_discharge')"><span id="fleet_health_discharge_tasks"></span>12</span></td>
               <td class="row" style="gap:6px;">
                 <button class="btn" onclick="goToView('healthAgents'); focusCard('ha_card_discharge')">View</button>
                 <button class="btn" onclick="openQuickRun()">Run</button>
@@ -231,7 +231,7 @@
               <td>Agentic Referral (LLM plan)</td>
               <td><span class="pill ok">Healthy</span></td>
               <td class="link-cell" onclick="goToView('healthAgents'); focusCard('ha_card_agentic')">2</td>
-              <td class="link-cell" onclick="goToView('healthAgents'); focusCard('ha_card_agentic')">4</td>
+              <td class="link-cell" onclick="goToView('healthAgents'); focusCard('ha_card_agentic')"><span id="fleet_health_agentic_tasks">4</span></td>
               <td class="row" style="gap:6px;">
                 <button class="btn" onclick="goToView('healthAgents'); focusCard('ha_card_agentic')">View</button>
                 <button class="btn" onclick="goToView('healthAgents'); focusCard('ha_card_agentic')">Run</button>
@@ -242,7 +242,7 @@
               <td>Consent Check</td>
               <td><span class="pill ok">Healthy</span></td>
               <td class="link-cell" onclick="goToView('healthAgents'); focusCard('ha_card_consent')">2</td>
-              <td class="link-cell" onclick="goToView('healthAgents'); focusCard('ha_card_consent')">7</td>
+              <td class="link-cell" onclick="goToView('healthAgents'); focusCard('ha_card_consent')"><span id="fleet_health_consent_tasks">7</span></td>
               <td class="row" style="gap:6px;">
                 <button class="btn" onclick="goToView('healthAgents'); focusCard('ha_card_consent')">View</button>
                 <button class="btn" onclick="goToView('healthAgents'); focusCard('ha_card_consent')">Run</button>
@@ -253,7 +253,7 @@
               <td>Travel (Uber Booking)</td>
               <td><span class="pill ok">Healthy</span></td>
               <td class="link-cell" onclick="goToView('healthAgents'); focusCard('ha_card_travel')">2</td>
-              <td class="link-cell" onclick="goToView('healthAgents'); focusCard('ha_card_travel')">3</td>
+              <td class="link-cell" onclick="goToView('healthAgents'); focusCard('ha_card_travel')"><span id="fleet_health_travel_tasks">3</span></td>
               <td class="row" style="gap:6px;">
                 <button class="btn" onclick="goToView('healthAgents'); focusCard('ha_card_travel')">View</button>
                 <button class="btn" onclick="goToView('healthAgents'); focusCard('ha_card_travel')">Run</button>
@@ -461,7 +461,13 @@
       <div class="row" style="justify-content: space-between;">
         <div>
           <h2 style="margin: 0 0 4px;" id="agentTitle">Balance Transfer Agent</h2>
-          <div style="color: var(--muted);">Billing Domain • Change of Ownership</div>
+          <div class="row" style="align-items:center; gap:8px; color: var(--muted);">
+            <span id="agentSubtitle">Billing Domain • Change of Ownership</span>
+            <select id="agentDomain" style="margin-left:8px;">
+              <option value="billing">Billing Agents</option>
+              <option value="health">Health Agents</option>
+            </select>
+          </div>
         </div>
         <div class="row">
           <span class="pill ok">Healthy</span>
@@ -1162,8 +1168,28 @@
         writeResults(kind, data, !!window.__appendMode);
         appendExecutionGraph(kind, payload, data);
         window.__appendMode = false;
-        if (!res.ok) showToast(label + ' failed (HTTP ' + res.status + ')');
-        else showToast(label + ' completed');
+        if (!res.ok) {
+          showToast(label + ' failed (HTTP ' + res.status + ')');
+        } else {
+          showToast(label + ' completed');
+          // Increment Fleet Dashboard Health Agents current task counters for the relevant agent
+          try {
+            const idMap = {
+              discharge: 'fleet_health_discharge_tasks',
+              agenticReferral: 'fleet_health_agentic_tasks',
+              consent: 'fleet_health_consent_tasks',
+              uber: 'fleet_health_travel_tasks'
+            };
+            const spanId = idMap[kind];
+            if (spanId) {
+              const el = document.getElementById(spanId);
+              if (el) {
+                const cur = parseInt((el.textContent || '0').trim(), 10);
+                el.textContent = String(isNaN(cur) ? 1 : cur + 1);
+              }
+            }
+          } catch (e) {}
+        }
       } catch (e) {
         writeResults(kind, { error: String(e) }, !!window.__appendMode);
         window.__appendMode = false;
@@ -1421,6 +1447,81 @@
     function goToAgentWithCase() {
       goToAgent('Balance Transfer Agent');
       showToast('Loaded case context into Behaviour tab');
+    }
+
+    // Agent Detail domain-aware configuration (Billing vs Health)
+    const AGENT_DETAIL_META = {
+      billing: {
+        title: 'Balance Transfer Agent',
+        subtitle: 'Billing Domain  b7 Change of Ownership',
+        systemPrompt: 'You are a reliable agent for SA Water billing operations. Follow policies and ensure customer protections.',
+        domainLabel: 'Domain Prompt (Billing)',
+        domainPrompt: 'Billing domain norms: apply hardship and vulnerable-customer protections prioritising continuity of service.',
+        processLabel: 'Process Prompt (Change of Ownership)',
+        processPrompt: 'When handling Change of Ownership, ensure balances are transferred fairly, avoiding wrongful disconnections where payment plans exist.',
+        envOverrides: 'Prod-only guardrails enabled. Log all disconnection intents for manual review.',
+        scenarios: [
+          'Disconnection with Active Payment Plan',
+          'Final Bill with Credit Balance',
+          'Move-In with Pending Special Read'
+        ],
+        previousBehaviour: 'Recommended disconnection despite active payment plan (low confidence).',
+        desiredBehaviour: 'Keep service connected, notify customer, and schedule follow-up; never disconnect vulnerable customers.'
+      },
+      health: {
+        title: 'Agentic Referral (Health)',
+        subtitle: 'Health Domain  b7 Referral & Consent',
+        systemPrompt: 'You are a care orchestration planner for Australian health services. Use clinical, consent, and policy context to plan safe follow-up.',
+        domainLabel: 'Domain Prompt (Health Agents)',
+        domainPrompt: 'Health domain norms: respect Australian health privacy regulations, consent policies, and suicide risk safeguards when planning referrals.',
+        processLabel: 'Process Prompt (Agentic Referral & Consent)',
+        processPrompt: 'For discharge and referral workflows, ensure follow-up appointments, community referrals, and consent-aware sharing decisions are created.',
+        envOverrides: 'In this demo, LLM decisions are logged and surfaced for review. Do not treat outputs as clinical advice.',
+        scenarios: [
+          'Suicide risk discharge follow-up (no safety plan documented)',
+          'Routine post-discharge GP follow-up',
+          'Community mental health referral after medication change'
+        ],
+        previousBehaviour: 'Created a single generic follow-up without highlighting suicide risk or consent constraints.',
+        desiredBehaviour: 'Schedule appropriate follow-ups (e.g., multiple GP and community MH appointments) and clearly explain how consent and policies shaped sharing.'
+      }
+    };
+
+    function applyAgentDetailDomain(domain) {
+      const meta = AGENT_DETAIL_META[domain] || AGENT_DETAIL_META.billing;
+      const titleEl = document.getElementById('agentTitle');
+      const subtitleEl = document.getElementById('agentSubtitle');
+      const systemTextarea = document.querySelector('#agent textarea[readonly]');
+      const domainLabelEl = document.querySelector("label[for='domainPrompt']") || document.querySelector("label:contains('Domain Prompt')");
+      const processLabelEl = document.querySelector("label[for='processPrompt']") || document.querySelector("label:contains('Process Prompt')");
+      const domainTa = document.getElementById('domainPrompt');
+      const processTa = document.getElementById('processPrompt');
+      const envTa = document.getElementById('envOverrides');
+      const scenSel = document.getElementById('scenarioSelect');
+      const prevTa = document.querySelector("label:contains('Agent’s Previous Behaviour') + textarea, label:contains('Agent\u2019s Previous Behaviour') + textarea") || null;
+      const desiredTa = document.getElementById('desiredBehaviour');
+
+      if (titleEl) titleEl.textContent = meta.title;
+      if (subtitleEl) subtitleEl.textContent = meta.subtitle;
+      if (systemTextarea) systemTextarea.value = meta.systemPrompt;
+      if (domainLabelEl) domainLabelEl.textContent = meta.domainLabel;
+      if (processLabelEl) processLabelEl.textContent = meta.processLabel;
+      if (domainTa) domainTa.value = meta.domainPrompt;
+      if (processTa) processTa.value = meta.processPrompt;
+      if (envTa) envTa.value = meta.envOverrides;
+      if (scenSel && Array.isArray(meta.scenarios)) {
+        while (scenSel.options.length) scenSel.remove(0);
+        meta.scenarios.forEach(s => {
+          const opt = document.createElement('option');
+          opt.textContent = s;
+          scenSel.appendChild(opt);
+        });
+      }
+      if (prevTa) prevTa.value = meta.previousBehaviour;
+      if (desiredTa) desiredTa.value = meta.desiredBehaviour;
+
+      const sel = document.getElementById('agentDomain');
+      if (sel) sel.value = domain;
     }
 
     // Env selector
